--- a/Foundation/Vanilla/bthosting/index.html
+++ b/Foundation/Vanilla/bthosting/index.html
@@ -35,9 +35,9 @@
       <div class="top-bar-right">
         <ul class="menu">
           <li><a href="#" class="current">Home</a></li>
-          <li><a href="shared.html">Shared Hosting</a></li>
-          <li><a href="vps.html">VPS Hosting</a></li>
-          <li><a href="dedicated.html">Dedicated Hosting</a></li>
+          <li><a href="#shared">Shared Hosting</a></li>
+          <li><a href="#vps">VPS Hosting</a></li>
+          <li><a href="#dedicated">Dedicated Hosting</a></li>
         </ul>
       </div>
     </div>
@@ -74,6 +74,88 @@
               </div>  
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="domain-search">
+      <div class="grid-x">
+        <div class="cell large-12 medium-12">
+          <form class="domain-form">
+            <div class="input-group">
+              <span class="input-group-label">Find a Domain</span>
+              <input class="input-group-field" type="text" placeholder="Search for .com .net .org"/>
+              <div class="input-group-button">
+                <button type="submit" class="button">Search</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="home-packages grid-x">
+      <div class="cell large-12 medium-12">
+        <h2 class="text-center">Hosting Packages for Everyone</h2>
+        <p class="lead text-center">We have hosting packages for individuals and businesses of all types</p>
+      </div>
+      <br/>
+
+      <ul class="tabs cell large-12 medium-12" data-tabs id="package-tabs">
+        <li class="tabs-title is-active"><a href="#shared">Shared Hosting</a></li>
+        <li class="tabs-title"><a href="#vps">Cloud VPS</a></li>
+        <li class="tabs-title"><a href="#dedicated">Dedicated Hosting</a></li>
+      </ul>
+
+      <div class="tabs-content" data-tabs-content="package-tabs">
+        <div class="tabs-panel is-active callout-packages" id="shared">
+          <div class="grid-x">
+            <div class="cell large-4 medium-4 callout-box-1">
+              <h3>Simple Shared</h3>
+              <p>Great for small and simple sites</p>
+              <i class="fa fa-database" aria-hidden="true"></i>
+              <ul class="features menu vertical">
+                <li>25GB SSD Storage</li>
+                <li>100GB Data Transfer</li>
+                <li>10 Email Accounts</li>
+                <li>1 Domain Name</li>
+              </ul>
+              <div class="pricing"><span>$9.99</span> per Month</div>
+              <a class="button large expanded" href="#">GET IT TODAY</a>
+            </div>
+            <div class="cell large-4 medium-4 callout-box-2">
+                <h3>Standard Shared</h3>
+                <p>Great for medium size sites</p>
+                <i class="fa fa-database" aria-hidden="true"></i>
+                <ul class="features menu vertical">
+                  <li>250GB SSD Storage</li>
+                  <li>500GB Data Transfer</li>
+                  <li>20 Email Accounts</li>
+                  <li>2 Domain Names</li>
+                </ul>
+                <div class="pricing"><span>$29.99</span> per Month</div>
+                <a class="button large expanded" href="#">GET IT TODAY</a>
+            </div>
+            <div class="cell large-4 medium-4 callout-box-3">
+                <h3>Enterprise Shared</h3>
+                <p>Great for business sites</p>
+                <i class="fa fa-database" aria-hidden="true"></i>
+                <ul class="features menu vertical">
+                  <li>500GB SSD Storage</li>
+                  <li>1TB Data Transfer</li>
+                  <li>Unlimited Email Accounts</li>
+                  <li>Unlimited Domain Names</li>
+                </ul>
+                <div class="pricing"><span>$99.99</span> per Month</div>
+                <a class="button large expanded" href="#">GET IT TODAY</a>
+            </div>
+          </div>
+        </div>
+        <div class="tabs-panel" id="vps">
+          
+        </div>
+        <div class="tabs-panel" id="dedicated">
+          
         </div>
       </div>
     </section>
